Reduced numbers of dependencies